force-app/main/default/objects/ssot__AssessmentIndicatorDefinedValue__dlm/fields/ssot__AssessmentIndicatorDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentIndicatorDefinitionId__c</fullName>
    <label>Assessment Indicator Definition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentIndicatorDefinitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>