force-app/main/default/objects/ssot__AssessmentIndicatorDefinedValue__dlm/fields/ssot__ValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValueText__c</fullName>
    <label>Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>